/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message CFE_SB_SendErrEventBuf_t_pb
{

	required uint32 EventId = 1;
	required int32 ErrStat = 2;
	required string PipeId = 3;
}