/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message GPS_ParserStatus_t_pb
{

	required uint32 ClassID = 1;
	required uint32 PayloadCursor = 2;
	required uint32 MsgLength = 3;
	required uint32 ChecksumA = 4;
	required uint32 ParseError = 5;
	required uint32 MsgID = 6;
	required uint32 MsgReceived = 7;
	required uint32 ParseState = 8;
}